--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Mi Playlist</title>
+	<link rel="stylesheet" type="text/css" href="css/materialize.min.css">
+	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 
 	<!-- Agregar los estilos -->
+
 
 </head>
 <body>
@@ -36,5 +39,7 @@
 
 
 	<!-- Agregar los scripts -->
+	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src= "js/app.js"></script>
 </body>
 </html>
